--- a/package.json
+++ b/package.json
@@ -11,30 +11,30 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.16.2",
-    "express": "^4.15.3",
+    "express": "^4.16.2",
     "react": "^0.14.9",
     "react-dom": "^0.14.9",
-    "react-router": "^2.0.0"
+    "react-router": "^2.8.1"
   },
   "devDependencies": {
-    "babel-core": "^6.5.1",
+    "babel-core": "^6.26.0",
     "babel-loader": "^6.2.2",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "css-loader": "0.23.1",
-    "expect": "^1.14.0",
+    "expect": "^1.20.2",
     "foundation-sites": "6.2.0",
-    "jquery": "2.2.1",
+    "jquery": "^3.3.1",
     "karma": "^0.13.22",
-    "karma-chrome-launcher": "^0.2.2",
+    "karma-chrome-launcher": "^0.2.3",
     "karma-mocha": "^0.2.2",
-    "karma-mocha-reporter": "^2.0.0",
+    "karma-mocha-reporter": "^2.2.5",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^1.7.0",
-    "mocha": "^2.4.5",
-    "node-sass": "^4.5.3",
-    "react-addons-test-utils": "^0.14.6",
+    "karma-webpack": "^1.8.1",
+    "mocha": "^2.5.3",
+    "node-sass": "^4.7.2",
+    "react-addons-test-utils": "^0.14.8",
     "sass-loader": "^6.0.6",
     "script-loader": "0.6.1",
     "style-loader": "0.13.0",
